# Aetheris

./: .gitignore  5k_log.txt  CMakeLists.txt  README.MD  imgui.ini  stdout.txt  test.cpp
assets/shaders/compute/: empty.comp  simulate.comp
assets/shaders/graphics/: particle.frag  particle.vert
design/: AETHERIS_DEVLOG.md  AETHERIS_MASTER_CONTEXT.md  CHANGELOG.MD  IMPLEMENTATION_PLAN.md  KNOWN_ISSUES.MD  MILESTONE_1.5.md  PROJECT_STRUCTURE.md  ROADMAP.MD  TODAYS_CHECKPOINTS.md
docs/: architecture.md  checkpoints.md  coding_standards.md  contributing.md  coordinate_system.md  data_fllow.md  gpu_architecture.md  gpu_pipeline.md  master_context.md  physics_model.md  project_strcuture.md  render_pipeline.md  roadmap.md  spawn_pipeline.md  systems.md  vision.md  workflow.md  world.md
scripts/: requirements.txt  tracker.py
scripts/cognition/: __init__.py  gemini_client.py  input_manager.py
src/: main.cpp  network.cpp  network.h  settings.h  ui.cpp  ui.h  ui_layout.cpp  ui_layout.h  ui_widgets.cpp  ui_widgets.h
src/application/: application.cpp  application.h
src/core/: log.cpp  log.h  time.cpp  time.h
src/core_math/: bounds.cpp  bounds.h  geometry.cpp  geometry.h  projection.cpp  projection.h
src/editor/: editor.cpp  editor.h  editor_state.h
src/editor/panels/: bottom_panel.cpp  bottom_panel.h  i_panel.h  left_sidebar.cpp  left_sidebar.h  right_sidebar.cpp  right_sidebar.h  toolbar_panel.cpp  toolbar_panel.h  viewport_panel.cpp  viewport_panel.h
src/editor/theme/: colors.h  theme.cpp  theme.h  widgets.cpp  widgets.h
src/input/: input.cpp  input.h
src/platform/: dpi_aware.cpp  dpi_aware.h
src/renderer/: compute_pipeline.cpp  compute_pipeline.h  gl_helpers.cpp  gl_helpers.h  gpu_allocator.cpp  gpu_allocator.h  particle_renderer.cpp  particle_renderer.h  renderer.cpp  renderer.h
src/rendering/: grid_renderer.cpp  grid_renderer.h  renderer.cpp  renderer.h
src/rendering/gpu/: gpu_particle_buffer.cpp  gpu_particle_buffer.h
src/rendering/shader/: compute_shader.cpp  compute_shader.h  shader.cpp  shader.h
src/shaders/: particle_render.frag  particle_render.vert  particle_shader.glsl
src/shaders/postprocess/: grid_overlay.glsl
src/simulation/: simulation_settings.h
src/spawning/: spawn_request.h  spawn_system.cpp  spawn_system.h
src/viewport/: viewport.cpp  viewport.h
src/world/: particle.h  particle_system.cpp  particle_system.h  world.cpp  world.h
